--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ canonical: https://minimal-light-theme.yliu.me/
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
 google_scholar: https://scholar.google.com/citations?user=hOzuhn8AAAAJ
-cv_link: assets/files/curriculum_vitae.pdf
+cv_link: assets/files/cv.pdf
 github_link: https://github.com/harishankarv
 linkedin: https://www.linkedin.com/in/harishankarv
 twitter: https://twitter.com/_harishankarv
